[build-system]
requires = ["setuptools>=61.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysmatch"
description = "Propensity Score Matching (PSM) on Python"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Miao HanCheng", email = "hanchengmiao@gmail.com" }
]
dependencies = [
    "catboost>=1.2.7",
    "matplotlib>=3.7.1",
    "numpy>=1.26.4,<2.0.0",
    "pandas>=2.1.4",
    "scipy>=1.13.1",
    "seaborn>=0.12.2",
    "statsmodels>=0.14.3",
    "scikit-learn>=1.5.2",
    "imbalanced-learn>=0.12.3",
    "optuna>=4.1.0"
]

[project.urls]
"Homepage" = "https://github.com/mhcone/pysmatch"
"Source" = "https://github.com/mhcone/pysmatch"

[tool.setuptools]
packages = ["pysmatch"]
include-package-data = true

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"